# liblinal

./: .gitignore  CMakeLists.txt  conanfile.py
include/: lal.hh  linal.hh
include/lal/: float_cmp.hh
test/: test_float_cmp.cc
